# midgard

GtkmmAddons/: Makefile.am  REPOSITORY_MOVED  autogen.sh  configure.in
GtkmmAddons/doku/gCVS/: Entries
GtkmmAddons/gCVS/: Entries
GtkmmAddons/glade/gCVS/: Entries
GtkmmAddons/searchcombo/: ChangeLog  Makefile.am  TODO  autogen.sh  configure.in
GtkmmAddons/searchcombo/gCVS/: Entries
GtkmmAddons/searchcombo/src/: Makefile.am  gtksearchcombo.c  gtksearchcombo.h
GtkmmAddons/searchcombo/tests/: Makefile.am  gsc_test.c
GtkmmAddons/src/: .cvsignore  Gtk2TeX.cc  Gtk2TeX.h  Gtk_OStream.cc  Gtk_OStream.h  Gtk_OStream_TreeView.cc  Gtk_OStream_clist.cc  Gtk_OStream_label.cc  Gtk_OStream_list.cc  Gtk_OStream_optionmenu.cc  Gtk_OStream_stream.cc  Makefile.am  Message.h  Picture.cc  Picture.h  Picture2.cc  Picture2.h  SearchCombo.cc  SearchCombo.ccg  SearchCombo.gen_h  SearchCombo.h  SearchCombo.hg  SearchComboContent.h  SelectMatching.h  TCList.cc  TCList.h  TCListRow.cc  TCListRow.h  TCListRow_ct.cc  TCListRow_ct.h  TCList_ct.cc  TCList_ct.h  TCList_iterator.h  TeX.cc  TeX.h  callbackbuf.h  green_minus.xpm  localgtk.defs  red_plus.xpm  string_width.cc
GtkmmAddons/src/gCVS/: Entries
GtkmmAddons/src/private/: SearchCombo_p.h
GtkmmAddons/tests/: .cvsignore  Makefile.am  clist.cc  nsc_test.cc  optionmenu.cc  os_list.cc  sccont_test.cc  tclist.cc  tree.cc
gtk_sound/: Makefile.am  autogen.sh  configure.in  sound_gtk.glade
gtk_sound/src/: Makefile.am  class_sound.cc  class_sound.h  main_window.cc  main_window.hh  main_window_glade.cc  main_window_glade.hh  sound_gtk.cc
midgard/: .cvsignore  .glademm-callbacks  .mt-attrs  AUTHORS  ChangeLog  Makefile.am  NEWS  NEWS_old  NOTIZEN  README  REGELN  TODO  Update.script  acconfig.h  autogen.sh  configure  configure.in  magus-gtk2.spec  magus-rpm-data.spec  magus-rpm.spec  magus2_cvs  magus2_mt  midgard.glade  midgard.gladep  midgard_cvs
midgard/docs/: About.html  AboutNav.html  BGen_Hand.html  BGen_Rule.html  BGen_Wizard.html  BGen_ZGen.html  BMod_Au.html  BMod_Be.html  BMod_GW.html  BMod_LS.html  BMod_NG.html  BMod_Op.html  BMod_St.html  BMod_St_Besitz.html  BMod_St_Fert.html  BMod_St_Kido.html  BMod_St_SpraSchri.html  BMod_St_Waf.html  BMod_St_Zaub.html  BMod_Welcome.html  BMod_ZG..html  BMod_ZG.html  BSTV_Std.html  BSTV_ZG.html  BedienungMain.html  BedienungNav.html  Bedienung_Ausruest.html  Bedienung_Beschreib.html  Bedienung_Element.html  Bedienung_Genesis.html  Bedienung_Modul.html  Bedienung_Option.html  Bedienung_Steigern.html  Download.html  FAQ.html  Features.html  GW_Main.html  Geschichte.html  GetAndInstall.html  HomeNav.html  (+62 more)
midgard/docs/css/: magus.css  (+4 more)
midgard/libmagus/: .cvsignore  Abenteurer.cc  Abenteurer.hh  AbenteurerAuswahl.h  AbenteurerLernpunkte.cc  AbenteurerLernpunkte.hh  Abenteurer_besitz.cc  Abenteurer_steigern.cc  Ausgabe.cc  Ausgabe.hh  Ausruestung.cc  Ausruestung.hh  Beruf.cc  Beruf.hh  CopyFile.cc  CopyFile.hh  Datenbank.cc  Datenbank.hh  Enums.hh  Fertigkeiten.cc  Fertigkeiten.hh  Fertigkeiten_angeboren.cc  Fertigkeiten_angeboren.hh  Grad_anstieg.cc  Grad_anstieg.hh  Grundwerte.cc  Grundwerte.hh  KI.cc  KI.hh  KiDo.cc  KiDo.hh  LaTeX_drucken.cc  LaTeX_drucken.hh  LaTeX_drucken_ausruestung.cc  LaTeX_drucken_beschreibung.cc  LaTeX_drucken_spielleiterbogen.cc  Land.cc  Land.hh  LernListen.cc  LernListen.hh  (+105 more)
midgard/libmagusicons/: .cvsignore  Makefile.am  embed.cc  iconlist  iconlist.ulf  libmagusicons.def  libmagusicons.rc  libmagusicons.rc.in  magusicons.cc  magusicons.h  magusicons_p.h
midgard/macros/: petig.m4
midgard/pixmaps/: .cvsignore  Abwehr-26.xpm  Abwehr-50.xpm  AngebSkills-trans-50.xpm  Angeb_All-32.xpm  Angeb_Nase-32.xpm  Angeb_Ohr-32.xpm  Angeb_Reflex-32.xpm  Angeb_Richtung-32.xpm  Angeb_Sicht-32.xpm  Angeb_Tast-32.xpm  Anleitung.xpm  Anpass-trans-50.xpm  Anpass-trans-50_invers.xpm  Arkanum-50.xpm  Armor-trans-50.xpm  Ausruest_small.xpm  Automat-32.xpm  Blue-Dice-trans-50.xpm  Claymore-50.xpm  Clear-32.xpm  CountrChar-trans-50.xpm  Cyan-Dice-trans-50.xpm  Descr.Char-40.xpm  DescrChar-trans-50.xpm  Dfr3-50.xpm  Dfr4-50.xpm  Dice-2W6-trans-50.xpm  Dice-Ausruest-50.xpm  Dice-W100-trans-50.xpm  Dice-trans.xpm  Dice_Armor-trans-50.xpm  Dice_M-trans-50.xpm  Dices2-trans-50.xpm  Draco-small-frame-comp.xpm  Drucken.xpm  EP-Eingabe2-50.xpm  EP-Steigern-50.xpm  Edit-2W6-trans-50.xpm  Edit-trans-50.xpm  (+189 more)
midgard/src/: .cvsignore  Abenteurer.cc  Abenteurer.hh  Abenteurer_besitz.cc  Abenteurer_steigern.cc  Ausnahmen.cc  Ausnahmen.hh  Ausnahmen.pgcc  Ausruestung.cc  Ausruestung.hh  AuswahlAbstraktion.cc  AuswahlAbstraktion.h  BegruessungsWindow.cc  BegruessungsWindow.hh  BegruessungsWindow_glade.cc  BegruessungsWindow_glade.hh  Beruf.cc  Beruf.hh  Beruf.pgcc  Berufe_auswahl.cc  Berufe_auswahl.hh  Berufe_auswahl.pgcc  Berufe_auswahl_glade.cc  Berufe_auswahl_glade.hh  ChoiceButton.hh  Data_NewPreis.hh  Data_Prototyp.hh  Data_waffenbesitz.hh  Datenbank.cc  Datenbank.hh  DialogAuswahl.cc  DialogAuswahl.hh  DoubleButton.hh  Enums.hh  Fertigkeiten.cc  Fertigkeiten.hh  Fertigkeiten.pgcc  Fertigkeiten_angeboren.cc  Fertigkeiten_angeboren.hh  Fertigkeiten_angeboren.pgcc  (+445 more)
midgard/tools/: Makefile.am
midgard/win32/: Makefile  arkanum.afm  arkanum.pfb  arkanum.sfd  arkanum.tex  clearreg.cc  createicon  exedebug.c  genfont  gpl-ger.tex  index.html  launch.cc  launch.rc  link  magus.nsi.in  packing.HOWTO  registry.cc  registry.h  showreg.cc  test-utf.tex
midgard/xml/: .cvsignore  2do  AbenteuerBaende.xml  Alba.xml  Arkanum.xml  BarbarenWutRitterEhre.xml  Eschar.xml  Gildenbrief.xml  HexenzauberDruidenkraft.xml  HexenzauberDruidenkraftFinster.xml  Ikengabecken.xml  KanThaiPan.xml  Kompendium.xml  Kuestenstaaten.xml  Makefile.am  MeisterDerSphaeren.xml  Minangpahit.xml  NEW  Nahuatlan.xml  Prototyp2  Rawindra.xml  Regelwerk3.xml  Regelwerk4.xml  Waeland.xml  all_exp.cc  arkanum_exp.cc  arkanum_exp.pgcc  common_exp.cc  export_common.cc  export_common.h  fertigk_exp.cc  fertigk_exp.pgcc  import_common.h  ki_speichern.cc  kido_exp.cc  kido_exp.pgcc  land_sprache_exp.cc  land_sprache_exp.pgcc  midgard.xml  test  (+4 more)
(+282 files in other folders)
