# generated 2001/8/25 19:23:23 CEST by thoma@Tiger.
# using glademm V0.6.2_cvs

AC_INIT(src/sound_gtk.cc)
AM_INIT_AUTOMAKE(sound_gtk, 0.0)
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LIBTOOL

AC_LANG_CPLUSPLUS

PETIG_CHECK_POSTGRES
PETIG_CHECK_COMMONXX
PETIG_CHECK_COMMONGTK
PETIG_CHECK_KOMPONENTEN


AM_PATH_GTKMM(1.2.5,,
        AC_MSG_ERROR(Cannot find GTK--: Please install Version 1.2.5+))


AC_OUTPUT(Makefile src/Makefile )
