# generated 2001/2/2 8:41:25 CET by thoma@ig23.
# using glademm V0.5_11c

AC_INIT(src/midgard.cc)
AM_INIT_AUTOMAKE(magus, 0.9.0)
AM_CONFIG_HEADER(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LIBTOOL


AC_LANG_CPLUSPLUS

PETIG_CHECK_KOMPONENTEN2

if echo __MINGW32__ | cpp | fgrep -q __MINGW32__
then mingw=false
else mingw=true
fi
AM_CONDITIONAL(WINDOWS, test x$mingw = xtrue)

dnl Set PACKAGE_DATA_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  PACKAGE_DATA_DIR="${ac_default_prefix}/share/${PACKAGE}/"
else
  PACKAGE_DATA_DIR="${prefix}/share/${PACKAGE}/"
fi
AC_SUBST(PACKAGE_DATA_DIR)

AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR,"$PACKAGE_DATA_DIR",[install path])



AC_OUTPUT(Makefile src/Makefile pixmaps/Makefile \
	xml/Makefile libmagus/Makefile libmagusicons/Makefile)
