# generated 2001/2/2 8:41:25 CET by thoma@ig23.
# using glademm V0.5_11c

AC_INIT(src/midgard.cc)
AM_INIT_AUTOMAKE(magus, 0.9.1)
AC_CONFIG_HEADERS(config.h)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LIBTOOL


AC_LANG_CPLUSPLUS

PKG_CHECK_MODULES(SIGC,[sigc++-1.2 >= 1.2.0])
PKG_CHECK_MODULES(XMLPP,[libxml++-1.0],,[echo libxml++ is not needed])
PETIG_CHECK_KOMPONENTEN2

if echo __MINGW32__ | $CPP - - | fgrep -q __MINGW32__
then mingw=false
else mingw=true
fi
AM_CONDITIONAL(WINDOWS, test x$mingw = xtrue)

dnl Set PACKAGE_DATA_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  PACKAGE_DATA_DIR="${ac_default_prefix}/share/${PACKAGE}/"
else
  PACKAGE_DATA_DIR="${prefix}/share/${PACKAGE}/"
fi
AC_SUBST(PACKAGE_DATA_DIR)

AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR,"$PACKAGE_DATA_DIR",[install path])

dnl we don t want to link libmagus with gtkmm !
for i in $COMMONGTK2_LIBS 
do
  if expr match "$i" ".*commongtk.*" >/dev/null
  then COMMONGTK2_ONLY="$COMMONGTK2_ONLY $i" 
  fi
  if expr match "$i" ".*GtkmmAddons.*" >/dev/null
  then COMMONGTK2_ONLY="$COMMONGTK2_ONLY $i"
  fi
done
AC_SUBST(COMMONGTK2_ONLY)

AC_OUTPUT(Makefile src/Makefile pixmaps/Makefile \
	xml/Makefile libmagus/Makefile libmagusicons/Makefile)
