# $Id: configure.in,v 1.120 2006/06/16 06:53:08 christof Exp $

AC_PREREQ(2.50)
AC_INIT(magus, 0.9.9.15, [midgard-general@berlios.de])
AM_INIT_AUTOMAKE
AC_CONFIG_HEADERS(config.h)

MAGUS_MAJOR_VERSION=`echo $PACKAGE_VERSION | sed -e 's/^\(.*\)\..*\..*\..*$/\1/'`
MAGUS_MINOR_VERSION=`echo $PACKAGE_VERSION | sed -e 's/^.*\.\(.*\)\.\(.*\)\..*$/\1\2/'`
MAGUS_MICRO_VERSION=`echo $PACKAGE_VERSION | sed -e 's/^.*\..*\..*\.\(.*\)$/\1/'`
AC_SUBST(MAGUS_MAJOR_VERSION)
AC_SUBST(MAGUS_MINOR_VERSION)
AC_SUBST(MAGUS_MICRO_VERSION)

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_CXXCPP
AM_PROG_LIBTOOL


AC_LANG_CPLUSPLUS

#PKG_CHECK_MODULES(SIGC,[sigc++-1.2 >= 1.2.0])
#PKG_CHECK_MODULES(XMLPP,[libxml++-1.0],,[echo libxml++ is not needed])
PETIG_CHECK_KOMPONENTEN2

# hack for my new computer - don't know why this is not in gtkmm-2.4 ...
GTKMM_DEP_LIBS=`pkg-config --libs glibmm-2.4 gdkmm-2.4 gtk+-2.0 gdk-2.0 gdk-pixbuf-2.0 \
	atkmm-1.6 atk pangomm-1.4 pango gobject-2.0 glib-2.0`
AC_SUBST(GTKMM_DEP_LIBS)

if echo __MINGW32__ | $CPP - - | fgrep -q __MINGW32__
then mingw=false
else mingw=true
fi
AM_CONDITIONAL(WINDOWS, test x$mingw = xtrue)

dnl Set PACKAGE_DATA_DIR in config.h.
if test "x${prefix}" = "xNONE"; then
  PACKAGE_DATA_DIR="${ac_default_prefix}/share/${PACKAGE}/"
else
  PACKAGE_DATA_DIR="${prefix}/share/${PACKAGE}/"
fi
AC_SUBST(PACKAGE_DATA_DIR)

AC_DEFINE_UNQUOTED(PACKAGE_DATA_DIR,"$PACKAGE_DATA_DIR",[install path])

dnl we don t want to link libmagus with gtkmm !
for i in $COMMONGTK2_LIBS 
do
  if expr match "$i" ".*commongtk.*" >/dev/null
  then COMMONGTK2_ONLY="$COMMONGTK2_ONLY $i" 
  fi
  if expr match "$i" ".*GtkmmAddons.*" >/dev/null
  then COMMONGTK2_ONLY="$COMMONGTK2_ONLY $i"
  fi
done
AC_SUBST(COMMONGTK2_ONLY)

NATIVE_BUILD=`pwd`
if test $cross_compiling = yes
then
  NB_TEMP=$HOME/berlios/midgard
  if test -x $NB_TEMP/libmagusicons/embed ; then NATIVE_BUILD=$NB_TEMP ; fi
  NB_TEMP=$HOME/berlios/magus2/midgard
  if test -x $NB_TEMP/libmagusicons/embed ; then NATIVE_BUILD=$NB_TEMP ; fi
fi
AC_SUBST(NATIVE_BUILD)

AC_OUTPUT(Makefile src/Makefile pixmaps/Makefile \
	xml/Makefile libmagus/Makefile libmagusicons/Makefile \
	src/magus.rc libmagus/libmagus.rc libmagusicons/libmagusicons.rc \
	win32/magus.nsi libmagus/tests/Makefile)
