# generated 2001/8/25 19:23:23 CEST by thoma@Tiger.
# using glademm V0.6.2_cvs
#
# newer (non customized) versions of this file go to Makefile.am_new
bin_PROGRAMS = sound_gtk

sound_gtk_SOURCES = \
	sound_gtk.cc\
	main_window_glade.cc \
	main_window.cc \
   class_sound.cc

noinst_HEADERS = \
	main_window_glade.hh \
	main_window.hh \
   class_sound.h

CXXFLAGS = @CXXFLAGS@ @GTKMM_CFLAGS@ @KOMPONENTEN_INCLUDES@

sound_gtk_LDADD = @LIBS@ @GTKMM_LIBS@ @KOMPONENTEN_LIBS@
