# generated 2001/2/2 12:25:52 CET by thoma@ig23.
# using glademm V0.5_11c
#
# newer (non customized) versions of this file go to Makefile.am_glade


EXTRA_DIST = \
       AngebSkills-trans-50.xpm \
       Anpass-trans-50.xpm \
       Armor-trans-50.xpm \
       CountrChar-trans-50.xpm \
       DescrChar-trans-50.xpm \
       Dice-2W6-trans-50.xpm \
       Dice-W100-trans-50.xpm \
       Dice-trans.xpm \
       Dice_Armor-trans-50.xpm \
       Dice_M-trans-50.xpm \
       Dices2-trans-50.xpm \
       Edit-2W6-trans-50.xpm \
       EditChar-trans-50.xpm \
       Exit-trans-50.xpm \
       Help-trans-50.xpm \
       Info-trans-50.xpm \
       Job-trans-50.xpm \
       Lang-trans-50.xpm \
       Lang_Script-trans-50.xpm \
       LearnRoll-trans-50.xpm \
       LoadChar-trans-50.xpm \
       LoadSkills-trans-50.xpm \
       LoadWeapon-trans-50.xpm \
       LoadZaub-trans-50.xpm \
       Money-50.xpm \
       NewChar-trans-50.xpm \
       PrintChar-trans-50.xpm \
       Reduzieren-trans-32.xpm \
       SaveChar-trans-50.xpm \
       Select-trans-50.xpm \
       Skills-trans-50.xpm \
       Steigern-trans-32.xpm \
       Schliessen1-50.xpm \
       SchliessenIII-50.xpm \
       Verlernen-trans-32.xpm \
       Weapon-trans-50.xpm \
       Zauber-trans-50.xpm
